@@ -4,7 +4,7 @@
 The access-denied.html page is one of the two pages which is not 
 password protected. It is the page that handles unauthorized access 
 to password protected pages. It has an access denied message but 
-is otherwise identical to the index.html page. 
+otherwise it appears identical to the index.html page. 
 
 Copyright (c) 2014 Richard E. Price under the The MIT License.
 A copy of this license can be found in the LICENSE.text file.
